# tubepath

./: .env.example  .env.production.example  .eslintrc.json  .gitignore  .vercelignore  DEPLOY-TUBEPATH.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: repo-audit.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: .gitkeep
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
docs/: BUG-AUDIT-LATEST.md  BUG-AUDIT-REPORT.md  api-setup.md
public/: manifest.webmanifest  robots.txt
scripts/: audit-repo.mjs  generate-logos.mjs
src/app/: error.tsx  globals.css  layout.tsx  page.tsx
src/app/app/: error.tsx  layout.tsx  page.tsx
src/components/access/: PremiumGate.tsx  TrialBanner.tsx  UpgradeTeaser.tsx  useActivatePremium.ts
src/components/analytics/: StudioAnalyticsPanel.tsx  StudioTabBar.tsx
src/components/brand/: Logo.tsx
src/components/charts/: MetricChart.tsx  Sparkline.tsx
src/components/dashboard/: AnomalyList.tsx
src/components/feed/: FeedCard.tsx  PulseHero.tsx  StreakRing.tsx
src/components/macos/: AppShell.tsx  CommandPalette.tsx  Sidebar.tsx  TrafficLights.tsx  (+1 more)
src/lib/: access.ts  billing.ts  env.ts  metrics.ts  session.ts  store.ts  types.ts  utils.ts
supabase/: schema.sql
supabase/migrations/: 002_youtube_channels.sql  003_google_accounts.sql  20250627000000_initial_schema.sql
(+127 files in other folders)
